# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.fr.md  README.md
includes/: minishell.h
libft/: Makefile  README.md
libft/includes/: get_next_line.h  libft.h
libft/srcs/check/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnegative.c  ft_isprint.c  ft_isspace.c
libft/srcs/gnl/: get_next_line.c
libft/srcs/lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/srcs/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/srcs/put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstrlen.c
libft/srcs/stdlib/: ft_itoa.c
libft/srcs/str/: ft_split_whitespaces.c  ft_sstrdup.c  ft_sstrlen.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcountoccur.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strindexchr.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoinfree.c  ft_strlcat.c  ft_strlowcase.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strsubfree.c  ft_strtrim.c  ft_strupcase.c  (+2 more)
srcs/builtin/: cd_builtin.c  echo_builtin.c  env_builtin.c  env_builtin2.c  env_builtin3.c  exit_builtin.c  run_cmd.c  which_builtin.c
srcs/core/: ft_color.c  ft_error.c  ft_free.c  main.c  minishell_core.c
srcs/lst/: count_lst.c  create_lst.c  delete_lst.c  put_lst.c
srcs/sign/: signal.c
